--- a/.gitignore
+++ b/.gitignore
@@ -128,10 +128,13 @@ Control.ca-bundle
 Control.system-ca-bundle 
 GitHub.sublime-settings 
 
-# Visual Studio Code # 
+# Visual  Studio Code #
 .vscode/* 
 !.vscode/settings.json 
 !.vscode/tasks.json 
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+#DS_STORE
+.DS_Store
